--- a/Source/Mosa.BareMetal.GraphicalWorld.x86/Mosa.BareMetal.GraphicalWorld.x86.csproj
+++ b/Source/Mosa.BareMetal.GraphicalWorld.x86/Mosa.BareMetal.GraphicalWorld.x86.csproj
@@ -1,19 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
 		<LangVersion>11.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<UseAppHost>false</UseAppHost>
 		<DebugType>full</DebugType>
     </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Mosa.Kernel.BareMetal\Mosa.Kernel.BareMetal.csproj" />
-		<ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
-		<ProjectReference Include="..\Mosa.FileSystem\Mosa.FileSystem.csproj" />
+		<ProjectReference Include="..\Mosa.BareMetal.GraphicalWorld\Mosa.BareMetal.GraphicalWorld.csproj" />
+		<ProjectReference Include="..\Mosa.Kernel.BareMetal.x86\Mosa.Kernel.BareMetal.x86.csproj" />
 	</ItemGroup>
 
 </Project>
