--- a/Source/Mosa.BareMetal.GraphicalWorld.ARM64/Mosa.BareMetal.GraphicalWorld.ARM64.csproj
+++ b/Source/Mosa.BareMetal.GraphicalWorld.ARM64/Mosa.BareMetal.GraphicalWorld.ARM64.csproj
@@ -1,19 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net7.0</TargetFramework>
 		<LangVersion>11.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<UseAppHost>false</UseAppHost>
 		<DebugType>full</DebugType>
-    </PropertyGroup>
+	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Mosa.Kernel.BareMetal\Mosa.Kernel.BareMetal.csproj" />
-		<ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
-		<ProjectReference Include="..\Mosa.FileSystem\Mosa.FileSystem.csproj" />
+		<ProjectReference Include="..\Mosa.BareMetal.GraphicalWorld\Mosa.BareMetal.GraphicalWorld.csproj" />
+		<ProjectReference Include="..\Mosa.Kernel.BareMetal.ARM64\Mosa.Kernel.BareMetal.ARM64.csproj" />
 	</ItemGroup>
 
 </Project>
