fix: add timeouts to build pipeline

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -15,6 +15,7 @@ jobs:
   windows-build:
     name: Windows Build
     runs-on: windows-latest
+    timeout-minutes: 15
     env:
       NUGET_ENABLE_LEGACY_CSPROJ_PACK: true
     steps:
@@ -75,6 +76,7 @@ jobs:
     name: Windows Build Packaging
     needs: [windows-build, linux-build, generate-docs, windows-unit-testing, linux-unit-testing, windows-demo-testing, linux-demo-testing, macos-build, macos-unit-testing]
     runs-on: windows-latest
+    timeout-minutes: 15
     if: github.event_name == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
     env:
       NUGET_ENABLE_LEGACY_CSPROJ_PACK: true
@@ -116,6 +118,7 @@ jobs:
   linux-build:
     name: Linux Build
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - name: Set net7.0
         uses: actions/setup-dotnet@v3
@@ -144,6 +147,7 @@ jobs:
   macos-build:
     name: MacOS Build
     runs-on: macos-latest
+    timeout-minutes: 15
     steps:
       - name: Set net7.0
         uses: actions/setup-dotnet@v3
@@ -172,6 +176,7 @@ jobs:
   generate-docs:
     name: Generate Documentation
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     if: github.event_name == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
     steps:
       - name: Set python3.11
@@ -207,6 +212,7 @@ jobs:
       fail-fast: false
     name: Windows - Unit Test -o${{ matrix.optimization }}
     runs-on: windows-latest
+    timeout-minutes: 15
     needs: windows-build
     steps:
       - name: Checkout
@@ -228,6 +234,7 @@ jobs:
       fail-fast: false
     name: Linux - Unit Test -o${{ matrix.optimization }}
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: linux-build
     steps:
       - name: Set net7.0
@@ -257,6 +264,7 @@ jobs:
       fail-fast: false
     name: MacOS - Unit Test -o${{ matrix.optimization }}
     runs-on: macos-latest
+    timeout-minutes: 15
     needs: macos-build
     env:
       HOMEBREW_NO_INSTALL_CLEANUP: 1
@@ -286,6 +294,7 @@ jobs:
       fail-fast: false
     name: Windows - Demo Test -o${{ matrix.optimization }}
     runs-on: windows-latest
+    timeout-minutes: 15
     needs: windows-build
     steps:
       - name: Checkout
@@ -309,6 +318,7 @@ jobs:
       fail-fast: false
     name: Linux - Demo Test -o${{ matrix.optimization }}
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: linux-build
     steps:
       - name: Set net7.0
@@ -340,6 +350,7 @@ jobs:
   #    fail-fast: false
   #  name: MacOS - Demo Test -o${{ matrix.optimization }}
   #  runs-on: macos-latest
+  #  timeout-minutes: 15
   #  needs: macos-build
   #  steps:
   #    - name: Set net7.0
