--- a/Source/Mosa.Packages/Mosa.Platform.x86.nuspec
+++ b/Source/Mosa.Packages/Mosa.Platform.x86.nuspec
@@ -11,16 +11,16 @@
 		<icon>images/Mosa Icon.png</icon>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>MOSA x86 platform libraries</summary>
-		<description>This package contains the necessary platform libraries for using the MOSA x86 kernel and runtime on x86.</description>
+		<description>This package contains the x86 implementations of the BareMetal kernel and runtime libraries (including the core library).</description>
 		<copyright>Copyright © MOSA Project 2023</copyright>
 		<tags>MOSA Compiler</tags>
 		<dependencies>
-			<dependency id="Mosa.Korlib" version="$version$" />
-			<dependency id="Mosa.Runtime" version="$version$" />
+			<dependency id="Mosa.Platform" version="$version$" />
 		</dependencies>
 	</metadata>
 	<files>
 		<file src="..\Art\Mosa Icon.png" target="images" />
+		<file src="..\..\bin\Mosa.Kernel.BareMetal.x86.dll" target="lib\net7.0" />
 		<file src="..\..\bin\Mosa.Runtime.x86.dll" target="lib\net7.0" />
 		<file src="..\..\bin\Mosa.Plug.Korlib.x86.dll" target="lib\net7.0" />
 	</files>
